# ara

./: .gitignore  LICENSE  Makefile.am  arm_semihosting_writec.c  configure.ac  default.nix  hello_world.c  test.c
ftdi/: README.adoc  vision_five.cfg  vision_five.ld
src/: Makefile.am  arm_semihosting.ccm  bit_field.cc  bit_field.ccm  bit_field.h  ftdi.ccm  jtag.ccm  jtag.h
test/: Makefile.am
test/e2e/: Makefile.am  test.cc
test/unit/: Makefile.am  arm_semihosting.cc  bit_field.cc  jtag.cc
